added remove-spell method to url-sets
